<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".views.activity.my_care_plan.GpAndHospitalActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@drawable/img_gp_hospital_header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/gp_and_hospital_visits"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/opensans_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:text="@string/by_clickingthe"
                style="@style/gpHospitalDescription" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_education_my_summary"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/btn_blue_radius"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/my_copd_summary"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/opensans_semibold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:text="@string/gp_hospital_desc_one"
                style="@style/gpHospitalDescription" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:text="@string/gp_hospital_desc_two"
                style="@style/gpHospitalDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_gp_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:overScrollMode="never"
                android:padding="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="5"
                tools:listitem="@layout/list_item_gp_hospital_common" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>