<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <include
            android:id="@+id/include_contact"
            layout="@layout/common_module_toolbar" />

        <TextView
            android:id="@+id/tv_contact_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/txt_contact_content"
            android:textColor="@color/Grey_800"
            android:textSize="@dimen/_9sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/include_contact"
            android:fontFamily="@font/opensans_regular" />

        <LinearLayout
            android:id="@+id/layout_no_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/contacts_btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_content">

            <ImageView
                android:id="@+id/image_no_data"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_no_data"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_no_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/txt_no_data"
                android:textColor="@color/setting_text_color"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/opensans_regular" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contact_rcv_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/contacts_btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_content"
            tools:listitem="@layout/row_contact" />

        <Button
            android:id="@+id/contacts_btn_add"
            style="@style/contacts_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts_add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/opensans_regular" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>