<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.activity.education.ResourcesActivity">

        <include
            android:id="@+id/include"
            layout="@layout/common_module_toolbar"
            android:visibility="visible"
            tools:visibility="visible" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/resources"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/opensans_bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center"
                    android:text="@string/helpful_link_websites"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/opensans_regular" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_header_image" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcl_resources_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:itemCount="4"
                        tools:listitem="@layout/item_view_edu_resource_category" />

                    <TextView
                        android:id="@+id/tv_resources_detail_empty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/no_data_available"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:visibility="gone"
                        android:fontFamily="@font/opensans_regular" />


                </RelativeLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>